--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,23 +2,25 @@
 
 @config "../tailwind.config.js";
 
-:root {
-  /* background */
-  --background: 248 250 252; /* #f8fafc */
-  --foreground: 15 23 42; /* #0f172a */
-
-  --card: 255 255 255;
-  --card-foreground: 15 23 42;
-
-  --primary: 59 130 246;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-.dark {
-  --background: 2 6 23; /* #020617 */
-  --foreground: 226 232 240; /* #e2e8f0 */
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
 
-  --card: 15 23 42;
-  --card-foreground: 226 232 240;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  --primary: 96 165 250;
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
